--- a/android-engineer.html
+++ b/android-engineer.html
@@ -194,7 +194,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Malaysia</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/nerdery/job/oRYnbfw7'>Nerdery Careers - Android Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/nerdery/job/oRYnbfw7'>Nerdery Careers - Android Engineer</a></h5> 
 <p><span class="badge badge-light">Minneapolis, Minnesota  Chicago, Illinois  Phoenix, Arizona</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
@@ -202,7 +202,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='https://sanerjobs.com/job/android-engineer-stripe/114'>Android Engineer at Stripe - SanerJobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sanerjobs.com/job/android-engineer-stripe/114'>Android Engineer at Stripe - SanerJobs</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
@@ -215,7 +215,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p>2 days ago ... Great communication and English skills; Great iOS or Android experience with 
 code to prove it; Javascript experience a plus; You know how to architect all?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/tandemmoneylimited/jobs/4481420002'>Job Application for Android Engineer at Tandem Bank</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tandemmoneylimited/jobs/4481420002'>Job Application for Android Engineer at Tandem Bank</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-19</p>
 <hr/>
@@ -406,7 +406,7 @@ mission to help parents teach financial literacy to kids.</p>
 <p><span class="badge badge-light">Toronto Toronto  Toronto  Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://greenlight.applytojob.com/apply/NcYeSJUJl6/Android-Software-Engineer'>Android Software Engineer - Greenlight - Career Page</a></h5> 
+<h5><a href='http://greenlight.applytojob.com/apply/NcYeSJUJl6/Android-Software-Engineer'>Android Software Engineer - Greenlight - Career Page</a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-05</p>
 <hr/>
@@ -424,7 +424,7 @@ mission to help parents teach financial literacy to kids.</p>
 work on innovative mobile projects that would impact tens of millions of people's
 ?...</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/averityteam/job/kmdhhbk559fat3yi4ns71qer7o'>Senior Android Engineer | Averity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/kmdhhbk559fat3yi4ns71qer7o'>Senior Android Engineer | Averity</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
@@ -448,7 +448,7 @@ work on innovative mobile projects that would impact tens of millions of people'
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/shutterflyinc/job/oMF7afws'>Shutterfly Careers - Android Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/shutterflyinc/job/oMF7afws'>Shutterfly Careers - Android Engineer</a></h5> 
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
@@ -460,7 +460,7 @@ work on innovative mobile projects that would impact tens of millions of people'
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tide.workable.com/j/F96C5174A7'>Tide - Jobs: Senior Android Engineer (3 month contract) - Apply online</a></h5> 
+<h5><a href='https://tide.workable.com/j/F96C5174A7'>Tide - Jobs: Senior Android Engineer (3 month contract) - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
