--- a/ios-developer.html
+++ b/ios-developer.html
@@ -129,7 +129,7 @@ building continuous integration pipelines; Demonstrable mastery in the?...</p>
 <p><span class="badge badge-light">Jakarta Jakarta Jakarta, Indonesia  Indonesia</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://mastercard.wd1.myworkdayjobs.com/en-US/CorporateCareers/job/Vancouver-Canada/iOS-Software-Developer_R-96268?codes=MemberJOBSMicrosite10'>iOS Software Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mastercard.wd1.myworkdayjobs.com/en-US/CorporateCareers/job/Vancouver-Canada/iOS-Software-Developer_R-96268?codes=MemberJOBSMicrosite10'>iOS Software Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... iOS Software Developer. Who is Mastercard? We are the global technology 
 company behind the world's fastest payments processing network. We are a 
@@ -175,7 +175,7 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Oct 10, 2019 ... Apply online for the job of Backend Application Developer (Node.js) at Semios.</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/a64sumbjsm8othgbr1bwuh1yyr'>Senior iOS App Developer | Strategic Employment</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/strategicemployment/job/a64sumbjsm8othgbr1bwuh1yyr'>Senior iOS App Developer | Strategic Employment</a></h5> 
 <p><span class="badge badge-light">Irvine, CA  Irvine</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
@@ -197,7 +197,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Pune, Maharashtra, India</span></p>
 <p>Posted on: 2019-10-17</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oD4gafwR&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=nYGacMwh'>ServiceNow Careers - Senior iOS Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oD4gafwR&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=nYGacMwh'>ServiceNow Careers - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">Tel Aviv, Israel  Tel Aviv</span></p>
 <p>Posted on:: 2019-10-17</p>
 <hr/>
@@ -269,11 +269,11 @@ vehicle?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/info-stretch-corporation/job/oQnAafwH'>Infostretch Corporation Careers - Senior iOS Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/info-stretch-corporation/job/oQnAafwH'>Infostretch Corporation Careers - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">Santa Clara, CA  Redwood City</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<h5><a href='https://mediamonks.workable.com/j/A8744F8CB8'>MediaMonks - Jobs: iOS Developer at MediaMonks MX - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mediamonks.workable.com/j/A8744F8CB8'>MediaMonks - Jobs: iOS Developer at MediaMonks MX - Apply online</a></h5> 
 <p><span class="badge badge-light">Mexico City, Mexico  Mexico</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -325,7 +325,7 @@ vehicle?...</p>
 <p><span class="badge badge-light">Indonesia Indonesia Indonesia</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/revolut/dbdc7705-7056-46fd-90f0-d9b34794fc56'>Revolut - Senior iOS Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/revolut/dbdc7705-7056-46fd-90f0-d9b34794fc56'>Revolut - Senior iOS Developer</a></h5> 
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -374,7 +374,7 @@ latest technologies and machine learning algorithms. We have served 5 million?..
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/TridentConsultingInc2/743999696806846-ios-developer'>Trident Consulting Inc IOS developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/TridentConsultingInc2/743999696806846-ios-developer'>Trident Consulting Inc IOS developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -386,7 +386,7 @@ latest technologies and machine learning algorithms. We have served 5 million?..
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/highrise/cdf78851-9c72-4eee-bdd1-bcbdf927334d/apply'>Highrise - iOS Developer</a></h5> 
+<h5><a href='https://jobs.lever.co/highrise/cdf78851-9c72-4eee-bdd1-bcbdf927334d/apply'>Highrise - iOS Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 29, 2019 ... As part of your application, we'd love to hear what you think are some of the best 
 designed apps (in terms of technical design) and why. This is open ended and?...</p>
